--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,8 +9,8 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
+    <h1>[SlyBIney] Site Plan</h1>
+    <h2>[Sylvester Biney]</h2>
     <h2>WDD 130-[section]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
@@ -19,16 +19,16 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>[To make reservation for rafting trips]</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>[Tourist and water rafters, we will target ages 8-75. Adventurous people who love to thrill of water.]</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
-    <h3>Website Logo</h3>
+    <h3>image logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
     <hr />
