--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -53,10 +53,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#f8f9fa]</td>
+        <td class="secondary">[#212529]</td>
+        <td class="accent1">[#ced4da]</td>
+        <td class="accent2">[#6c757d]</td>
       </tr>
     </table>
 
