--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -19,12 +19,12 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[This is a website that will our audience the chance to explore our service, which is mainly water rafting.]</p>
+    <p>[The pupose of the site is to create a platform for lovers of rafting to explore the available services we offer, as they caome with a addition values and packages.]</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Our target audience are people who are adventurous and love rafting, which falls between the ages of 8-70 years]</p>
-    <!-- change this --
+    <p>[Our target audience is to meet the needs of rafters, between the ages of 8-60 years. Those who are adventurous, and love water rafting.]</p>
+    <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
@@ -53,10 +53,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#f8f9fa]</td>
-        <td class="secondary">[#212529]</td>
-        <td class="accent1">[#ced4da]</td>
-        <td class="accent2">[#6c757d]</td>
+        <td class="primary">[#396E94]</td>
+        <td class="secondary">[#E7C24F]</td>
+        <td class="accent1">[#A43312]</td>
+        <td class="accent2"></td>
       </tr>
     </table>
 
