--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WWD130</title>
+    <Link href="portal.css" rel="stylesheet">
 </head>
 <body>
      <nav>
