--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,13 +8,14 @@
 <body>
     <header>
         <a id="logo_link" href="wwr/index.html">White Water Rafting Website</a>
-        <img class="logo5_200.png" src="images/logo5_200.png" alt="logo images">
+            <img class="logo5_200.png" src="images/logo5_200.png" alt="logo images">
     </a>
     <nav>
         <a href="index.html">Home</a>
         <a href="#">Page 2</a>
         <a href="site-plan-rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
+    </nav>
     </header>
     <div id="hero">
         <div id="hero-box">
@@ -24,7 +25,7 @@
             <h1 class="home title">Raftyz</h1>
             <h4>Rafting with a purpose</h4>
             <div class="button box">
-                <a class="book" 'href="contactus.html">Book now</a>
+                <a class='book' href="contactus.html">Book now</a>
             </div>
       </section>
 </div>
