--- a/wwr/index.html
+++ b/wwr/index.html
@@ -45,7 +45,29 @@
         <img class="icon" src="https://res.cloudinary.com/powerreviews/image/upload/f_auto,q_auto,h_768,w_auto/d_portal-no-product-image_ttlfpi.svg/prod/iit6ewhodjoycshrqcbb.webp" alt="rafting icon">
         <h2>Rapids</h2>
     </section>
+    <img class="mountains" src="https://assets.simpleviewinc.com/simpleview/image/upload/c_fill,h_761,q_75,w_1903/v1/clients/estespark/0G0A1465_ede5270b-5fc9-49a6-a62b-3e6a33a49262.jpg" alt="rafting mountain">
+    <section class="msg">
+        <h2>Raft With Adventure</h2>
+        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+        <a class="join" href="rivers.html">Join Us</a>
+    </section>
 </main>
+<footer>
+    <p>Raftyz &copy; 2023 - Sylvester Biney</p>
+    <p><a href="site-plan-rafting.html">Site Plan</a></p>
+    <p><a href="contactus.html">contact us</a></p>
+    <div class="social">
+        <a href="https://facebook.com">
+            <img src="images/facebook.png" alt="facebook icon">
+        </a>
+        <a href="https://snapchat.com">
+            <img src="images/snapcaht.png" alt="snapchat icon">
+        </a>
+        <a href="https://instagram.com">
+            <img scr="images/instagram.png" alt="instagram icon">
+        </a>
+    </div>
+</footer>
     
 </body>
 </html>
