--- a/wwr/index.html
+++ b/wwr/index.html
@@ -61,10 +61,10 @@
             <img src="https://th.bing.com/th/id/OIP.Ua5AXhtGRgPuisZVmetclQHaFL?pid=ImgDet&rs=1" alt="facebook icon">
         </a>
         <a href="https://snapchat.com">
-            <img src="images/snapcaht.png" alt="snapchat icon">
+            <img src="https://th.bing.com/th/id/R.5a15e6ba30df76780e54ed2ca3cf43e2?rik=loHwooIbaxKsyg&riu=http%3a%2f%2f1000logos.net%2fwp-content%2fuploads%2f2017%2f08%2fsnapchat-logo-transparent.png&ehk=%2bx%2biQvlCxhV1R7cZ6fIzmRlVu9ZcbDEtn7H%2bbPABQx8%3d&risl=&pid=ImgRaw&r=0" alt="snapchat icon">
         </a>
         <a href="https://instagram.com">
-            <img scr="images/instagram.png" alt="instagram icon">
+            <img scr="https://th.bing.com/th/id/R.5e04fd779e7607a47d0bad14976caa90?rik=MYieavaZpaXrMw&riu=http%3a%2f%2f1000logos.net%2fwp-content%2fuploads%2f2017%2f02%2fNew-Instagram-logo.jpg&ehk=kTNHOU7RNhSBC8VTl4FPXOmyjXgyJlrNtPiZ9qk03fA%3d&risl=&pid=ImgRaw&r=0" alt="instagram icon">
         </a>
     </div>
 </footer>
