--- a/wwr/index.html
+++ b/wwr/index.html
@@ -64,7 +64,7 @@
             <img src="https://th.bing.com/th/id/R.5a15e6ba30df76780e54ed2ca3cf43e2?rik=loHwooIbaxKsyg&riu=http%3a%2f%2f1000logos.net%2fwp-content%2fuploads%2f2017%2f08%2fsnapchat-logo-transparent.png&ehk=%2bx%2biQvlCxhV1R7cZ6fIzmRlVu9ZcbDEtn7H%2bbPABQx8%3d&risl=&pid=ImgRaw&r=0" alt="snapchat icon"width=50>
         </a>
         <a href="https://instagram.com">
-            <img scr="https://static.vecteezy.com/system/resources/previews/018/930/413/non_2x/instagram-logo-instagram-icon-transparent-free-png.png" alt="instagram icon"width=50>
+            <img scr="https://static.vecteezy.com/system/resources/previews/018/930/413/non_2x/instagram-logo-instagram-icon-transparent-free-png" alt="instagram icon"width=50>
         </a>
     </div>
 </footer>
