--- a/wwr/index-draft.html
+++ b/wwr/index-draft.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a id="logo_link" href="wwr/index.html">White Water Rafting Website</a>
+        <a id="logo_link" href="wwr/index.html">
             <img class="logo5_200.png" src="images/logo5_200.png" alt="logo images">
         </a>
     <nav>
