--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
      <nav>
-    
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
@@ -21,6 +20,9 @@
     <p>I am a graphic design student with emphasis in UI/UX design from Ghana.
     <p>I love to play soccer and basketball. I like to play some video games especially fifa.
     <p>My favorite food is Jollof rice. I served my mission in Nigeria, which I can say was my best two years of my life. </p>
+    <footer>
+        <p>WDD130-2023</p>
+    </footer>
 
 </body>
 </html>
