--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     </nav>                 
     <h1>Sylvester Biney</h1>
-    <img src="slytie.jpg" alt="picture of Sylvester"width=300/>
+    <img src="slytie.jpg" alt="picture of Sylvester"/>
     <p>I am a graphic design student with emphasis in UI/UX design from Ghana.
     <p>I love to play soccer and basketball. I like to play some video games especially fifa.
     <p>My favorite food is Jollof rice. I served my mission in Nigeria, which I can say was my best two years of my life. </p>
