--- a/wwr/ice/index.html
+++ b/wwr/ice/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ICE CHALLENGE</title>
-     <link rel="stylesheet" href="ice-portal.css">
+     <link rel="stylesheet" href="portal.css">
 </head>
 <body>
     <h1>Education</h1>
