--- a/wwr/ice/index.html
+++ b/wwr/ice/index.html
@@ -11,11 +11,12 @@
     <p>Education is the difference between wishing you could help others & 
     <P>being able to help them
     <p>---President Nelson</p>
-    <p>
-        <p>1.Faith in the Lord Jesus Christ
-        <p>2.Repentance
-        <p>3.Baptism by immersion for the remission of sins
-        <p>4.Laying on of hands for the gift of the Holy Ghost</p>
+     <ul>
+        <li>Faith in the Lord Jesus Christ</li>
+        <li>Repentance</li>
+        <li>Baptism by immersion for the remission of sins</li>
+        <li>Laying on of hands for the gift of the Holy Ghost</li>
+     </ul>
     <img src="https://assets.ldscdn.org/77/3d/773d0c3048a583c96bbceb8e9067b3a4394585c7/russell_nelson_official_portrait_2018.jpeg" alt="picture of Sylvester"/>
     <p>"Because of the
     <p>Savior's Atonement,
