--- a/wwr/ice/index.html
+++ b/wwr/ice/index.html
@@ -7,6 +7,7 @@
      <link rel="stylesheet" href="portal.css">
 </head>
 <body>
+    <div class="container">
     <h1>Education</h1>
     <p>Education is the difference between wishing you could help others & 
     <P>being able to help them
@@ -29,6 +30,7 @@
         <p> President of the Church of Jesus Christ of Latter-
         <p>day Saints</p>
     </footer>
+</div>
     
 </body>
 </html>
