--- a/wwr/ice/index.html
+++ b/wwr/ice/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
     <h1>Education</h1>
-    <p>Education is the difference between wishing you could help others & 
-    <P>being able to help them
-    <p>---President Nelson</p>
+    <p class="white">Education is the difference between wishing you could help others &</br>
+    being able to help them</br>
+    ---President Nelson</p>
      <ol>
     <li>Faith in the Lord Jesus Christ</li>
     <li>Repentance</li>
