--- a/wwr/ice/index.html
+++ b/wwr/ice/index.html
@@ -19,12 +19,12 @@
     <li>Laying on of hands for the gift of the Holy Ghost</li>
     </ol>
     <img src="https://assets.ldscdn.org/77/3d/773d0c3048a583c96bbceb8e9067b3a4394585c7/russell_nelson_official_portrait_2018.jpeg" alt="picture of Sylvester"/>
-    <p>"Because of the
-    <p>Savior's Atonement,
-    <p>His gospel provides
-    <p>an invitation to keep
-    <p>changing, growing, 
-    <p>and becoming more pure."</p>
+    <p>"Because of the</br>
+    Savior's Atonement,</br>
+    His gospel provides</br>
+    an invitation to keep</br>
+    changing, growing,</br> 
+    and becoming more pure."</p>
     <footer>
         <p>Russell M. Nelson
         <p> President of the Church of Jesus Christ of Latter-
