--- a/wwr/ice/index.html
+++ b/wwr/ice/index.html
@@ -26,9 +26,9 @@
     changing, growing,</br> 
     and becoming more pure."</p>
     <footer>
-        <p>Russell M. Nelson
-        <p> President of the Church of Jesus Christ of Latter-
-        <p>day Saints</p>
+        <p>Russell M. Nelson</br>
+        President of the Church of Jesus Christ of Latter-</br>
+        day Saints</p>
     </footer>
 </div>
     
