--- a/wwr/ice/index.html
+++ b/wwr/ice/index.html
@@ -19,7 +19,7 @@
     <li>Laying on of hands for the gift of the Holy Ghost</li>
     </ol>
     <img src="https://assets.ldscdn.org/77/3d/773d0c3048a583c96bbceb8e9067b3a4394585c7/russell_nelson_official_portrait_2018.jpeg" alt="picture of Sylvester"/>
-    <p class="font-size=medium">"Because of the</br>
+    <p class="font-size=1.5em">"Because of the</br>
     Savior's Atonement,</br>
     His gospel provides</br>
     an invitation to keep</br>
