--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raftyz</title>
+        <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
+        <max-width=1600px></max-width>
     <header>
         <a id="logo_link" href="wwr/index.html">
             <img class="logo5_200.png" src="images/logo5_200.png" alt="logo images">
@@ -60,14 +63,15 @@
         <a href="https://facebook.com">
             <img src="https://th.bing.com/th/id/OIP.Ua5AXhtGRgPuisZVmetclQHaFL?pid=ImgDet&rs=1" alt="facebook icon" width=70>
         </a>
-        <a href="https://snapchat.com">
+        <a href="https://snapchat.com" target="_blank">
             <img src="https://th.bing.com/th/id/R.5a15e6ba30df76780e54ed2ca3cf43e2?rik=loHwooIbaxKsyg&riu=http%3a%2f%2f1000logos.net%2fwp-content%2fuploads%2f2017%2f08%2fsnapchat-logo-transparent.png&ehk=%2bx%2biQvlCxhV1R7cZ6fIzmRlVu9ZcbDEtn7H%2bbPABQx8%3d&risl=&pid=ImgRaw&r=0" alt="snapchat icon" width=50>
         </a>
-        <a href="https://twitter.com">
+        <a href="https://twitter.com" target="_blank">
             <img src="https://www.pngkey.com/png/full/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png" alt="twitter icon" width=40>
         </a>
     </div>
 </footer>
+</div>
     
 </body>
 </html>
