--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
         <div id="content">
             <header>
                 <a id="logo_link" href="wwr/index.html">
-                    <img class="logo5_200.png" src="images/logo5_200.png" alt="logo images">
+                    <img class="logo" src="images/logo5_200.png" alt="logo images">
                 </a>
             <nav>
                 <a href="index.html">Home</a>
