--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,7 +27,7 @@
                 <h1 class="home-title">Raftyz</h1>
                 <h4>Rafting with a purpose</h4>
                 <div class='button-box'>
-                    <a class='book' href="contactus.html">Book now</a>
+                    <a class='book' href="rates.html">Book now</a>
                 </div>
             </section>
         </div>
@@ -49,9 +49,9 @@
             <img class="icon" src="https://cdn-icons-png.flaticon.com/512/3163/3163745.png" alt="rafting icon" width=200>
             <h2>Rapids</h2>
         </section>
-        <section class="mountains-card">
-            <img class="mountains-img" src="https://assets.simpleviewinc.com/simpleview/image/upload/c_fill,h_761,q_75,w_1903/v1/clients/estespark/0G0A1465_ede5270b-5fc9-49a6-a62b-3e6a33a49262.jpg" alt="rafting mountain">
-        </section>
+        <div id="background"></div>
+        <img class="mountains-img" src="https://assets.simpleviewinc.com/simpleview/image/upload/c_fill,h_761,q_75,w_1903/v1/clients/estespark/0G0A1465_ede5270b-5fc9-49a6-a62b-3e6a33a49262.jpg" alt="rafting mountain">
+        
         <section class="msg">
             <h2>Raft In Adventure</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
@@ -63,7 +63,7 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">contact us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="https://th.bing.com/th/id/OIP.Ua5AXhtGRgPuisZVmetclQHaFL?pid=ImgDet&rs=1" alt="facebook icon" width=70>
             </a>
             <a href="https://snapchat.com" target="_blank">
