--- a/wwr/index.html
+++ b/wwr/index.html
@@ -49,8 +49,7 @@
             <h2>Rapids</h2>
         </section>
         <div id="background"></div>
-        <img class="mountains" src="https://assets.simpleviewinc.com/simpleview/image/upload/c_fill,h_761,q_75,w_1903/v1/clients/estespark/0G0A1465_ede5270b-5fc9-49a6-a62b-3e6a33a49262.jpg" alt="rafting mountain" width="1000" height="600
-        ">
+        <img class="mountains" src="https://assets.simpleviewinc.com/simpleview/image/upload/c_fill,h_761,q_75,w_1903/v1/clients/estespark/0G0A1465_ede5270b-5fc9-49a6-a62b-3e6a33a49262.jpg" alt="rafting mountain" width="1000" height="600">
          <section class="msg">
             <h2>Raft In Adventure</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
