--- a/sdezyns/site-plan.html
+++ b/sdezyns/site-plan.html
@@ -10,8 +10,8 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
+      <h1>S-designs</h1>
+      <h2>Sylvester Biney Ampiah</h2>
       <h2>WDD 130-[section]</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
@@ -21,17 +21,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>This site is to serve as a platform where people can reach out for a branding project(logo) to be executed for them, as individual or company.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>Individuals or comapnies that needs an identity, specifically a logo that meet thier personality, brand qualities or attributes.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="photos/Official logo-01.png" alt="Logo image" width="80px">
       <hr>
       <h2>
         Style Guide
@@ -51,7 +51,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">#07020d</td><td class="secondary">#fa8401</td><td class="accent1">#ffffff</td><td class="accent2">#48b8d0</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -62,22 +62,23 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Source+Sans+3:wght@900  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Source+Sans+3  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
       </h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        A quality logo designed at S-designs is the first step towards success. 
+        Get a new and trendy logo design for yourself and your business, designed by our specialized Graphic Designers.
       </p>
       <h3>
         Colored paragraph example
       </h3>
       <p class="colored">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        You can also create customized business cards and other branding merchandise directly from your logo. You will only need to print them and share them with everybody. 
       </p>
 
       <!-- ------------------------Step 10------------------------------ -->
