--- a/sdezyns/site-plan.html
+++ b/sdezyns/site-plan.html
@@ -65,7 +65,7 @@
         Heading Font: Source+Sans+3:wght@900  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Source+Sans+3  <!-- change this -->
+        Paragraph Font: Poppins  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
