--- a/sdezyns/site-plan.html
+++ b/sdezyns/site-plan.html
@@ -62,7 +62,7 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Source+Sans+3:wght@900  <!-- change this -->
+        Heading Font: Amita:wght@700  <!-- change this -->
       </h4>
       <h4>
         Paragraph Font: Poppins  <!-- change this -->
