--- a/sdezyns/site-plan.html
+++ b/sdezyns/site-plan.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>S-designs</h1>
+      <h1>S-designz</h1>
       <h2>Sylvester Biney Ampiah</h2>
       <h2>WDD 130-[section]</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
