--- a/sdezyns/site-plan.html
+++ b/sdezyns/site-plan.html
@@ -133,22 +133,28 @@
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[Services]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [Our logo design services bridge the gap from tactical imaginative to artwork production—either for an individual, standalone firms, or well-established agencies that need a strong sense of identity.
+        Once the tactical direction and creative idea has been finalized our Adaptive team apply the design intent across all applicable formats, making sure that we stay true to the original vision, our Designers work across all channels to deliver a consistent brand experience.
+        Our packaging specialists consider dual merchandised pack layouts in store and understand print process limitations. Our design team apply holistic foundation across in-store environments, marketing literature and all online formats. Whatever the channel we make sure that those bright ideas are brilliantly executed.
+        ]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="photos/rsz_sitso_hugo-01.png" alt="random logo">
+        <img src="photos/rsz_sitso_hugo2-02.png" alt="random logo">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>[About]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        [S-Designz, the logo design and execution agency built for the age of acceleration. We are in the age of more. More ads, apps and distractions. More ways to shop. More channels. More challenges. Where that ‘more’ is only moving faster. Today, brands face ever-spiraling competition for consumers’ attention and affection. To survive—and thrive—they need to stand out and stay relevant.
+        We convey to our clients brighter creative ideas that cuts through the chaos. Executed and delivered to market with unmatched speed, control and competence. Except nothing but the best care that will leave you with no headache, regrets or inconvenience. Just bold ideas and great results. This is because we are built to evolve, improve, and stay current, even though are still new to the industry—we are a blend of the old school and new school, and strive to stay unto on top and current.
+        And while our portfolio is inspiring, our approach is never impersonal. Our clients trust us for the outcomes we always produce, and stay with us for the care we extend. Explore our works and have a feel of them.
+        ]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="photos/slytie.jpg" alt="random image of group of people">
+        <img src="photos/Official logo-01.png" alt="random image of a man">
 
       </ul>
       <hr>
