--- a/sdezyns/site-plan.html
+++ b/sdezyns/site-plan.html
@@ -141,8 +141,8 @@
         ]
       </p>
       <p>Images for the Page 2</p>
-        <img src="photos/rsz_sitso_hugo-01.png width=500" alt="random logo">
-        <img src="photos/rsz_sitso_hugo2-02.png width=500" alt="random logo">
+        <img src="photos/rsz_sitso_hugo-01.png" alt="random logo" width=500>
+        <img src="photos/rsz_sitso_hugo2-02.png" alt="random logo" width=500>
 
       </ul>
       <h3>[About]</h3>
@@ -153,8 +153,8 @@
         ]
       </p>
       <p>Images for the Page 3</p>
-        <img src="photos/slytie.jpg width=500" alt="random image of group of people">
-        <img src="photos/Official logo-01.png width=500" alt="random image of a man">
+        <img src="photos/slytie.jpg" alt="random image of group of people" width=500>
+        <img src="photos/Official logo-01.png" alt="random image of a man" width=500>
 
       </ul>
       <hr>
