--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -121,7 +121,7 @@
 
     <h3>[Page 2]</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <!-- <img src=wwr/images/Wireframe Screenshot 2023-11-04 091119.png"" alt="page 2 wireframe"> -->
   </main>
 </body>
 
