--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -120,6 +120,8 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
+    <img src="images/Wireframe Screenshot 2023-11-04 091119.png" alt="home page wireframe" />
+
 
     <!-- <img src=wwr/images/Wireframe Screenshot 2023-11-04 091119.png"" alt="page 2 wireframe"> -->
   </main>
