--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -26,7 +26,7 @@
                 <h1 class="home-title">Rivers</h1>
                 <h4>Come experience the different rivers we have!</h4>
                 <div class="button-box">
-                    <a class='Explore' href="rates.html">Explore</a>
+                    <a class='Explore' href="rivers.html">Explore</a>
                 </div>
             </section>        
         
