--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -20,30 +20,19 @@
             </nav>
         </header>
             <div id="hero">
-                <img id="hero-img" src="https://byui-wdd.github.io/wdd130/resources/images/rafting62_1024.jpg" alt="radom water rafting">
+                <img id="hero-img" src="https://byui-wdd.github.io/wdd130/resources/images/rafting13_1024.jpg" alt="radom water rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Rivers</h1>
                 <h4>Come experience the different rivers we have!</h4>
                 <div class="button-box">
-                    <a class='Explore' href="rivers.html">Explore</a>
+                    <a class='Explore' href="rates.html">Explore</a>
                 </div>
             </section>        
-        
+    </div>    
     <main class="home-grid">
-        <section class="Salmon-River">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/resources/images/rafting58_600.jpg" alt="random water rafting">
-             <h2>Main Fork of the Salmon River, Idaho</h2>
-        </section>
-        <section class="Gray-Canyon">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/resources/images/littlecolorado.jpg" alt="random water rafting">
-             <h2>Desolation and Gray Canyon, Utah</h2>
-        </section>
-        <section class="Grand-Canyon">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/resources/images/salmon-boats.jpg" alt="random water rafting">
-             <h2>Grand Canyon, Arizona</h2>
-        </section>
-                </main>
+
+     </main>
     <footer>
         <p>Raftyz &copy; 2023 - Sylvester Biney</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
