--- a/sdezyns/site-plan.html
+++ b/sdezyns/site-plan.html
@@ -126,11 +126,11 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        [At S-Designz, we are more than just a logo design company; we are the architects of your brand's visual identity, the artists behind your unique story, and the catalyst for your success. Our mission is to empower businesses with unforgettable logos and visual branding that not only captivate but also inspire. Join us on this creative voyage, and let us embark on a journey to elevate your brand. Unleash the potential of your business with a logo that stands out, a logo that tells your story, a logo that defines your legacy. ]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="photos/logo hero.png" alt="image for homepage width=100%">
+        <img src="https://cdn.pixabay.com/photo/2023/02/23/19/30/bird-7809491_640.jpg" alt="image for homepage">
 
       </ul>
       <h3>[Services]</h3>
