--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -20,7 +20,7 @@
             </nav>
         </header>
             <div id="hero">
-                <img id="hero-img" src="https://byui-wdd.github.io/wdd130/resources/images/rafting13_1024.jpg" alt="radom water rafting">
+                <img id="hero-img" src="https://byui-wdd.github.io/wdd130/resources/images/rafting16_1024.jpg" alt="radom water rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Rivers</h1>
@@ -31,7 +31,24 @@
             </section>        
     </div>    
     <main class="home-grid">
-
+         <img class="rivers-1" src="https://byui-wdd.github.io/wdd130/resources/images/rafting11_1024.jpg" alt="rafting mountain" width="1000" height="600">
+        <section class="msg-1">
+           <h2>Main Fork of the Salmon River, Idaho</h2>
+           <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+           <a class="join" href="rivers.html">Join Us</a>
+       </section>
+       <img class="rivers-2" src="https://byui-wdd.github.io/wdd130/resources/images/rafting28_1024.jpg" alt="rafting mountain" width="1000" height="600">
+       <section class="msg-2">
+          <h2>Desolation and Gray Canyon, Utah</h2>
+          <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+          <a class="join" href="rivers.html">Join Us</a>
+         </section>
+         <img class="rivers-3" src="https://byui-wdd.github.io/wdd130/resources/images/rafting54_1024.jpg" alt="rafting mountain" width="1000" height="600">
+         <section class="msg-3">
+            <h2>Grand Canyon, Arizona</h2>
+            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+            <a class="join" href="rivers.html">Join Us</a>
+        </section>
      </main>
     <footer>
         <p>Raftyz &copy; 2023 - Sylvester Biney</p>
@@ -47,8 +64,7 @@
             <a href="https://twitter.com" target="_blank">
                 <img src="https://www.pngkey.com/png/full/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png" alt="twitter icon" width=40>
             </a>
-        </footer>
         </div>
-   
+    </footer>
 </body>
 </html>
