--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="rivers.html">Page 2</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
@@ -24,7 +24,7 @@
                 <img id="hero-img" src="https://res.klook.com/image/upload/c_fill,w_1265,h_712/q_80/w_80,x_15,y_15,g_south_west,l_Klook_water_br_trans_yhcmh3/activities/fr6ejt2d3lee5bccrcal.webp" alt="radom water rafting">
             </div>
             <section id="hero-msg">
-                <h1 class="home-title">Raftyz</h1>
+                <h1 class="home-title">RAFTYZ</h1>
                 <h4>Rafting with a purpose</h4>
                 <div class="button-box">
                     <a class='book' href="rates.html">Book now</a>
