--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -20,34 +20,32 @@
             </nav>
         </header>
             <div id="hero">
-                <img id="hero-img" src="https://byui-wdd.github.io/wdd130/resources/images/rafting16_1024.jpg" alt="radom water rafting">
-            </div>
-            <section id="hero-msg">
-                <h1 class="home-title">Rivers</h1>
-                <h4>Come experience the different rivers we have!</h4>
-                <div class="button-box">
-                    <a class='Explore' href="rates.html">Explore</a>
-                </div>
-            </section>        
+                <img id="hero-img" src="https://byui-wdd.github.io/wdd130/resources/images/rafting12_1024.jpg" alt="radom water rafting">
+                     <section id="hero-msg">
+                    <h1 class="home-title">RIVERS</h1>
+                </section>   
+            </div>     
     </div>    
-    <main class="home-grid">
-         <img class="rivers-1" src="https://byui-wdd.github.io/wdd130/resources/images/rafting11_1024.jpg" alt="rafting mountain" width="1000" height="600">
+    <main class="river-grid">
+         <img class="rivers-1" src="https://byui-wdd.github.io/wdd130/resources/images/rafting58_600.jpg" alt="rafting mountain">
         <section class="msg-1">
            <h2>Main Fork of the Salmon River, Idaho</h2>
-           <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-           <a class="join" href="rivers.html">Join Us</a>
+           <p>Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The Salmon was given the nickname long ago as the River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the rugged beauty of the river that they never left..</p>
+           <a class="join" href="rivers.html">Read More</a>
        </section>
-       <img class="rivers-2" src="https://byui-wdd.github.io/wdd130/resources/images/rafting28_1024.jpg" alt="rafting mountain" width="1000" height="600">
+       <img class="rivers-2" src="https://byui-wdd.github.io/wdd130/resources/images/rafting28_1024.jpg" alt="rafting mountain" >
        <section class="msg-2">
           <h2>Desolation and Gray Canyon, Utah</h2>
-          <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-          <a class="join" href="rivers.html">Join Us</a>
+          <p>Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.</p>
+          <a class="join" href="rivers.html">Read More</a>
          </section>
-         <img class="rivers-3" src="https://byui-wdd.github.io/wdd130/resources/images/rafting54_1024.jpg" alt="rafting mountain" width="1000" height="600">
+         <img class="rivers-3" src="https://byui-wdd.github.io/wdd130/resources/images/rafting26_600.jpg" alt="rafting mountain">
          <section class="msg-3">
             <h2>Grand Canyon, Arizona</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-            <a class="join" href="rivers.html">Join Us</a>
+            <p>This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget your visit to the Grand Canyon.
+
+                Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable river experience. The canyon is filled not only with exhilarating whitewater rapids, but with side canyons and ancient indian ruins accessible only by river.</p>
+            <a class="join" href="rivers.html">Read More</a>
         </section>
      </main>
     <footer>
