--- a/sdezyns/index.html
+++ b/sdezyns/index.html
@@ -20,7 +20,7 @@
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="photos/logo hero.png"alt="radom water rafting">
+                <img id="hero-img" src="images/hero img.png"alt="radom water rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">S-DESIGNZ</h1>
