--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -18,8 +18,8 @@
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-        <section id="hero-msg">
-            <h1 class="home-title">CONTACT US</h1>
+        <section id="contact-msg">
+            <h1 class="contact">CONTACT US</h1>
         </section>  
     </div>
     <main>
