--- a/sdezyns/index.html
+++ b/sdezyns/index.html
@@ -14,7 +14,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="rivers.html">Logos</a>
+                <a href="logos.html">Logos</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
