--- a/sdezyns/logos.html
+++ b/sdezyns/logos.html
@@ -20,16 +20,31 @@
         </header>
     </div>
     <main class="logos-grid">
-        <section class="third-1">
-            <img class="card-img" src="images/lmj card.png" alt="random water rafting" width="350" height="250">
-        </section>
-        <section class="third-2">
-            <img class="card-img" src="images/5800894.png" alt="random water rafting" width="350" height="250">
-        </section>
-        <section class="third-3">
-            <img class="card-img" src="images/rm372-pf39-b11-google-mockup.png" alt="random water rafting" width="350" height="250">
-        </section>
-        <section class="third-4">
-            <img class="card-img" src="images/lin.png" alt="random water rafting" width="350" height="250">
-        </section>
+        <img class="linda">
+            <img src="images/Sitso Hugo-01.png" alt="linda logo">
+            <div>
+                <h1>Linda logo</h1>
+                <p>a logo for linds</p>
+            </div>
+        </linda>
+        <img class="pic1">
+            <img src="images/lmj card.png" alt="linda logo">
+            <div>
+                <h2>logo name</h2>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ullam a aspernatur similique corrupti vero ratione dolores enim nulla, placeat sed error excepturi odio odit, tenetur doloribus delectus fugiat repellendus!</h3>
+            </div>
+        <img class="pic2">
+            <img src="images/lmj card.png" alt="linda logo">
+            <div>
+                <h2>logo name</h2>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ullam a aspernatur similique corrupti vero ratione dolores enim nulla, placeat sed error excepturi odio odit, tenetur doloribus delectus fugiat repellendus!</h3>
+            </div>
+        <img class="pic3">
+            <img src="images/lmj card.png" alt="linda logo">
+            <div>
+                <h2>logo name</h2>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ullam a aspernatur similique corrupti vero ratione dolores enim nulla, placeat sed error excepturi odio odit, tenetur doloribus delectus fugiat repellendus!</h3>
+            </div>
+        </second>
+        
     </main>
