--- a/sdezyns/logos.html
+++ b/sdezyns/logos.html
@@ -10,7 +10,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="sdezyns/index.html">
-                <img class="logo" src="images/Official logo-01.png" alt="logo images">
+                <img class="logo" src="images/Official-logo-01.png" alt="logo images">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -23,11 +23,11 @@
         <section id="sitso-section">
             <div class="sitso">
                 <section class="sitso-container">
-                    <img class="card-img" src="images/Sitso Hugo-01.png" alt="random logo" width="500" height="500">
+                    <img class="card-img" src="images/Sitso-Hugo-01.png" alt="random logo" width="500" height="500">
                 </section>
             </div>
                 <section class="sitso-container">
-                    <img class="card-img" src="images/Sitso Hugo2-02.png" alt="random logo" width="300" height="500">
+                    <img class="card-img" src="images/Sitso-Hugo2-02.png" alt="random logo" width="300" height="500">
                 </section>
                 <section class="sitso-container">
                     <h1>Sitso Hugo</h1>
@@ -43,7 +43,7 @@
                 </section>
             </div>
             <section class="logo3-container">
-                <img class="logo3" src="images/lmj card.png" alt="random logo" width="500" height="300">
+                <img class="logo3" src="images/lmj-card.png" alt="random logo" width="500" height="300">
                     <h2>AD LOGO</h2>
                     <h3>logo details</h3>
             </section>
@@ -56,23 +56,23 @@
         <section id="logo4-section">
             <div class="logo4">
                 <section class="logo4-container">
-                    <img class="logo4" src="images/za logo-01.png" alt="random logo" width="300" height="300">
+                    <img class="logo4" src="images/za-logo-01.png" alt="random logo" width="300" height="300">
                 </section>
             </div>
             <section class="logo4-container">
                 <img class="logo4" src="images/5800894.png" alt="random logo" width="400" height="300">
             </section>
             <section class="logo4-container">
-                <img class="logo4" src="images/Orange logo (1).png" alt="random logo" width="300" height="300">
+                <img class="logo4" src="images/Orange-logo.png" alt="random logo" width="300" height="300">
             </section>
-            <img class="logo4" src="images/AD WHITE BG-01-01.png" alt="random logo" width="300" height="300">
+            <img class="logo4" src="images/AD-WHITE-BG-01-01.png" alt="random logo" width="300" height="300">
             </section>
         </section>
     </main>
     <footer>
-        <p>sdesignz &copy;2023-Sylvester Biney</p>
+        <p>S-designz & copy: 2023-Sylvester Biney</p>
     </footer>    
-</div>   
+    </div>   
 </body>
 </html>    
   
