--- a/sdezyns/contactus.html
+++ b/sdezyns/contactus.html
@@ -10,7 +10,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="sdezyns/index.html">
-                <img class="logo" src="images/Official logo-01.png" alt="logo images">
+                <img class="logo" src="images/Official-logo-01.png" alt="logo images">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -42,7 +42,7 @@
         </form>
     </main>
     <footer>
-            <p>sdesignz &copy; 2023 - Sylvester Biney</p>
+            <p>S-designz & copy; 2023-Sylvester Biney</p>
      </footer>
      <script>
         // get the feedback div element so we can do something with it.
