--- a/sdezyns/index.html
+++ b/sdezyns/index.html
@@ -10,7 +10,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="sdezyns/index.html">
-                <img class="logo" src="images/Official-logo-01.png" alt="random logo">
+                <img class="logo" src="images/rsz_official_logo-01.png" alt="random logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -20,7 +20,7 @@
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero-img.png" alt="radom water rafting">
+                <img id="hero-img" src="images/hero img.png" alt="radom water rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">S-DESIGNZ</h1>
