--- a/sdezyns/logos.html
+++ b/sdezyns/logos.html
@@ -10,7 +10,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="sdezyns/index.html">
-                <img class="logo" src="images/Official-logo-01.png" alt="logo images">
+                <img class="logo" src="images/rsz_official_logo-01.png" alt="logo images">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -23,11 +23,11 @@
         <section id="sitso-section">
             <div class="sitso">
                 <section class="sitso-container">
-                    <img class="card-img" src="images/Sitso-Hugo-01.png" alt="random logo" width="500" height="500">
+                    <img class="card-img" src="images/rsz_sitso_hugo-01.png" alt="random logo" width="500" height="500">
                 </section>
             </div>
                 <section class="sitso-container">
-                    <img class="card-img" src="images/Sitso-Hugo2-02.png" alt="random logo" width="300" height="500">
+                    <img class="card-img" src="images/rsz_sitso_hugo2-02.png" alt="random logo" width="300" height="500">
                 </section>
                 <section class="sitso-container">
                     <h1>Sitso Hugo</h1>
@@ -37,18 +37,18 @@
         <section id="logo3-section">
             <div class="logo3">
                 <section class="logo3-container">
-                    <img class="logo3" src="images/rm372-pf39-b11-google-mockup.png" alt="random logo" width="500" height="300">
+                    <img class="logo3" src="images/rsz_rm372-pf39-b11-google-mockup.png" alt="random logo" width="500" height="300">
                     <h2>AD LOGO</h2>
                     <h3>logo details</h3>
                 </section>
             </div>
             <section class="logo3-container">
-                <img class="logo3" src="images/lmj-card.png" alt="random logo" width="500" height="300">
+                <img class="logo3" src="images/rsz_lmj_card.png" alt="random logo" width="500" height="300">
                     <h2>AD LOGO</h2>
                     <h3>logo details</h3>
             </section>
             <section class="logo3-container">
-                <img class="logo3" src="images/lin.png" alt="random logo" width="500" height="300">
+                <img class="logo3" src="images/rsz_lin.png" alt="random logo" width="500" height="300">
                     <h2>AD LOGO</h2>
                     <h3>logo details</h3>
             </section>
@@ -56,16 +56,16 @@
         <section id="logo4-section">
             <div class="logo4">
                 <section class="logo4-container">
-                    <img class="logo4" src="images/za-logo-01.png" alt="random logo" width="300" height="300">
+                    <img class="logo4" src="images/rsz_za_logo-01.png" alt="random logo" width="300" height="300">
                 </section>
             </div>
             <section class="logo4-container">
-                <img class="logo4" src="images/5800894.png" alt="random logo" width="400" height="300">
+                <img class="logo4" src="images/rsz_5800894.png" alt="random logo" width="400" height="300">
             </section>
             <section class="logo4-container">
-                <img class="logo4" src="images/Orange-logo.png" alt="random logo" width="300" height="300">
+                <img class="logo4" src="images/rsz_orange_logo_1.png" alt="random logo" width="300" height="300">
             </section>
-            <img class="logo4" src="images/AD-WHITE-BG-01-01.png" alt="random logo" width="300" height="300">
+            <img class="logo4" src="images/rsz_ad_white_bg-01-01.png" alt="random logo" width="300" height="300">
             </section>
         </section>
     </main>
