--- a/sdezyns/logos.html
+++ b/sdezyns/logos.html
@@ -18,7 +18,7 @@
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-       <main>
+        <main>
         <section id="sitso-section">
             <div class="sitso">
                 <section class="sitso-container">
@@ -30,26 +30,29 @@
                 </section>
                 <section class="sitso-container">
                     <h1>Sitso Hugo</h1>
-                    <p>Linda's Logo</p>
+                    <p>The client, Sitso Hugo, a developing fashion design company that seeks out the<br>best interest of fashion lovers
+                    by meeting their needs in a trendy style. They shared <br>with me their creative ideas and style, and requested a logo to fit with that vision:<br>something
+                    simple, clean, and modern. It is aimed at reaching a wider target,
+                    and <br> having a recognized identity worldwide with this logo. </p>
             </section>
         </section>
         <section id="logo3-section">
             <div class="logo3">
                 <section class="logo3-container">
                     <img class="logo3" src="images/rsz_rm372-pf39-b11-google-mockup.png" alt="random logo" width="500" height="300">
-                    <h2>AD LOGO</h2>
-                    <h3>logo details</h3>
+                    <h2>B9 LOGO</h2>
+                    <h3>We offer designs for product identity for merchandize.</h3>
                 </section>
             </div>
             <section class="logo3-container">
                 <img class="logo3" src="images/rsz_lmj_card.png" alt="random logo" width="500" height="300">
-                    <h2>AD LOGO</h2>
-                    <h3>logo details</h3>
+                    <h2>BUSINESS CARD</h2>
+                    <h3>We design business cards for individuals and<br>comampanies to meet the identity or brand.</h3>
             </section>
             <section class="logo3-container">
-                <img class="logo3" src="images/rsz_lin.png" alt="random logo" width="500" height="300">
-                    <h2>AD LOGO</h2>
-                    <h3>logo details</h3>
+                <img class="logo3" src="images/IDDY-LOGO.png" alt="random logo" width="500" height="300">
+                    <h2>IDDY'S LOGO</h2>
+                    <h3>At S-designz, we work togehter with our clients<br>to come up with a personal identity just like<br> what we did with our client, Idara. </h3>
             </section>
         </section>
         <section id="logo4-section">
