--- a/sdezyns/index.html
+++ b/sdezyns/index.html
@@ -13,21 +13,21 @@
                 <img class="logo" src="images/rsz_official_logo-01.png" alt="random logo">
             </a>
             <nav>
-                <a href="index.html">Home</a>
+                <a class="active" href="index.html">Home</a>
                 <a href="logos.html">Logos</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero img.png" alt="radom water rafting">
+                <img id="hero-img" src="images/hero-img.png" alt="radom water rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">S-DESIGNZ</h1>
             </section>
             <div class="social-inline">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/icons8-facebook-48 (1).png" alt="facebook icon" width=45>
+                    <img src="images/icons8-facebook-48.png" alt="facebook icon" width=45>
                  </a>
                 <a href="https://twitter.com" target="_blank">
                     <img src="images/icons8-twitterx-48.png" alt="X icon" width=50>
