--- a/sdezyns/contactus.html
+++ b/sdezyns/contactus.html
@@ -15,7 +15,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="logos.html">Logos</a>
-                <a href="contactus.html">Contact Us</a>
+                <a class="active" href="contactus.html">Contact Us</a>
             </nav>
         </header>
     </div>
@@ -49,7 +49,7 @@
                 <img src="images/icons8-twitterx-48.png" alt="X icon" width=50>
             </a>
             <a href="https://facebook.com" target="_blank">
-                <img src="images/icons8-facebook-48 (1).png" alt="facebook icon" width=45>
+                <img src="images/icons8-facebook-48.png" alt="facebook icon" width=45>
              </a>
         </div>
     </main>
